[FE] update home page

--- a/front-end/src/containers/Home/components/BottomForm/styles.scss
+++ b/front-end/src/containers/Home/components/BottomForm/styles.scss
@@ -7,7 +7,7 @@
   .bottom-form-title {
     width: 100%;
     text-align: center;
-    font-family: 'Montserrat-Light';
+    font-family: 'Montserrat-Medium';
     color: #686868;
   }
 
@@ -39,7 +39,7 @@
     width: 100%;
     text-align: center;
     font-size: $mobile-regular-font-size;
-    color: #7E808C;
+    color: #2E2E2E;
     margin-top: 5px;
 
     a {
