--- a/front-end/src/containers/Menus/components/SideItem/styles.scss
+++ b/front-end/src/containers/Menus/components/SideItem/styles.scss
@@ -15,6 +15,7 @@
       margin-right: 10px;
 
       .div-side-item-title {
+        font-family: 'Montserrat-Bold';
         font-size: 16px;
         margin-bottom: 10px;
       }
