[FE] minor fixes (help center, header, terms)

--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -67,6 +67,10 @@
         letter-spacing: -0.2px;
       }
     }
+
+    .div-link-selected {
+      color: #4C844E;
+    }
   }
 
   .div-buttons {
