[FE] edit profile backend api integration.  some issue fixes

--- a/front-end/src/containers/Modals/EditProfileModal/styles.scss
+++ b/front-end/src/containers/Modals/EditProfileModal/styles.scss
@@ -96,9 +96,31 @@
       }
 
       #input_state {
+        position: relative;
         width: 20%;
         margin-left: 5px;
         margin-right: 5px;
+
+        .select-us-state {
+          margin-top: 5px;
+          padding-left: 10px;
+          padding-right: 20px;
+          border: 1px solid $light-green-primary;
+          background-color: white;
+          outline: none;
+          width: 100%;
+          height: 43px;
+          color: $text-light-gray;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+        }
+
+        img {
+          position: absolute;
+          height: 5px;
+          right: 8px;
+          bottom: 18px;
+        }
       }
 
       #input_zip {
