--- a/front-end/src/containers/Authentication/Signup/styles.scss
+++ b/front-end/src/containers/Authentication/Signup/styles.scss
@@ -34,6 +34,10 @@
       .img-background {
         max-width: 100%;
         height: 100%;
+
+        img {
+          object-fit: contain !important;
+        }
       }
     }
 
@@ -45,6 +49,12 @@
   .div-signup-features-container {
     margin-top: 120px;
     margin-bottom: 120px;
+
+    .service-feature {
+      img {
+        object-fit: contain !important;
+      }
+    }
   }
 
   @media (max-width: 1200px) {
