--- a/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
@@ -66,14 +66,14 @@ $order-summary-header-height: 108px;
       margin: $margin 0;
 
       img {
-        height: 16px;
-        margin-right: 25px;
+        height: 20px;
+        margin-right: 15px;
         transition: all .25s linear;
       }
 
       span {
         color: #535453;
-        font-size: $small-font-size;
+        // font-size: $small-font-size;
         font-family: 'Montserrat-Medium';
         transition: all .25s linear;
       }
