--- a/front-end/src/containers/Settings/OrderHistory/styles.scss
+++ b/front-end/src/containers/Settings/OrderHistory/styles.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables/variables";
 
 .div-order-history-container {
-  margin-top: -70px;  
+  margin-top: -100px;  
 
   .div-order-history-header {
     height: 42px;
@@ -45,5 +45,22 @@
     margin: 100px 0;
     margin-left: 50%;
     transform: translateX(-50%);
+  }
+
+  @media (max-width: 710px) {
+    margin-top: -120px;
+
+    .div-order-history-header {
+      display: none;
+    }
+    
+    .btn-load-more {
+      margin-top: 30px;
+      margin-bottom: 10px;
+      width: 313px;
+      height: 53px;
+      border-radius: 3px;
+      font-size: $small-font-size;
+    }
   }
 }
