--- a/front-end/src/containers/Settings/MealPreference/styles.scss
+++ b/front-end/src/containers/Settings/MealPreference/styles.scss
@@ -1,7 +1,28 @@
 @import "../../../styles/variables/variables";
 
 .div-meal-preference-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -60px;
+  margin-top: -100px;
+
+  .div-meal-preference-header {
+    width: 100%;
+    height: 42px;
+    line-height: 42px;
+    background-color: #F1F1F1;
+    border-radius: 9px;
+    font-family: 'Montserrat-SemiBold';
+    color: $text-light-gray;
+    padding-left: 15px;
+  }
+
+  .div-meal-preference-items {
+    display: flex;
+    flex-wrap: wrap;
+
+    .meal-preference-item {
+      width: calc(33.3% - 20px);
+      margin: 10px;
+      flex-shrink: 1;
+      align-self: flex-start;
+    }
+  }
 }
