--- a/front-end/src/containers/Settings/EditProfile/styles.scss
+++ b/front-end/src/containers/Settings/EditProfile/styles.scss
@@ -1,14 +1,13 @@
 @import "../../../styles/variables/variables";
 
 .div-edit-profile-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 0 50px;
 
   .div-profile-list {
     display: flex;
 
     .div-profile-info {
+      flex-grow: 1;
       color: $text-light-gray;
       display: flex;
       margin-right: 150px;
@@ -41,8 +40,6 @@
   }
 
   .div-profile-update-password {
-    width: 984px;
-
     .div-profile-update-password-title {
       color: $green-primary;
       margin-bottom: 25px;
