--- a/front-end/src/containers/Settings/MealPreference/styles.scss
+++ b/front-end/src/containers/Settings/MealPreference/styles.scss
@@ -25,4 +25,26 @@
       align-self: flex-start;
     }
   }
+
+  @media (max-width: 1024px) {
+    .div-meal-preference-items {
+      .meal-preference-item {
+        width: calc(50% - 20px);
+      }
+    }
+  }
+
+  @media (max-width: 710px) {
+    .div-meal-preference-header {
+      display: none;
+    }
+
+    .div-meal-preference-items {
+      .meal-preference-item {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+  }
 }
