--- a/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
+++ b/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
@@ -1,36 +1,59 @@
 @import "../../../../../styles/variables/variables";
 
 .payment-method-info {
-  width: 50%;
-  display: flex;
-  align-items: end;
-  justify-content: space-between;
+  width: 660px;
+  height: 180px;
+  border-radius: 17px;
+  border: 1px solid #C7C7C7;
+  overflow: hidden;
 
-  .img-card {
-    height: 27px;
-    margin-right: 30px;
+  .blue {
+    background-color: rgba(1, 93, 175, 0.74);
   }
 
-  .div-card-number-expiry {
-    font-size: $small-font-size;
-    .div-card-number {
-      color: $text-primary;
-      font-family: 'Montserrat-SemiBold';
-    }
+  .orange {
+    background-color: #F79F1A;
+  }
 
-    .div-card-expiry {
+  .cyan {
+    background-color: #009CDE;
+  }
+
+  .payment-method-info-title {
+    height: 90px;
+
+    span {
+      line-height: 90px;
+      font-size: $footer-primary-font-size;
+      margin-left: 30px;
+      color: white;
+    }
+  }
+
+  .payment-method-info-content {
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 40px;
+
+    .div-image-wrapper {
+      width: 80px;
+      
+      .img-payment-method {
+        width: 40px;
+      }
+  
+      .img-payment-method-long {
+        width: 80px;
+      }
+    }
+    
+
+    .span-remove {
+      text-decoration: underline;
+      font-size: $small-font-size;
       color: $text-light-gray;
-      white-space: nowrap;
     }
   }
-
-  .div-remove {
-    color: $text-light-gray;
-    font-size: $small-font-size;
-    text-decoration: underline;
-  }
-}
-
-.payment-method-info-underlined {
-  border-bottom: 1px solid $text-light-gray;
 }
